--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -1,4 +1,5 @@
 <resources>
     <string name="app_name">GymVenomApp</string>
     <string name="hello_worlddd">Hello Worlddd!</string>
+    <string name="hello_wordddlddd">aa</string>
 </resources>
