--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -2,4 +2,5 @@
     <string name="app_name">GymVenomApp</string>
     <string name="hello_worlddd">Hello Worlddd!</string>
     <string name="hello_wordddlddd">aa</string>
+    <string name="hello_worsd">aaa</string>
 </resources>
