--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -3,4 +3,5 @@
     <string name="hello_worlddd">Hello Worlddd!</string>
     <string name="hello_wordddlddd">aa</string>
     <string name="hello_worsd">aaa</string>
+    <string name="gatoooo">gatooo</string>
 </resources>
