--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -4,4 +4,5 @@
     <string name="hello_wordddlddd">aa</string>
     <string name="hello_worsd">aaa</string>
     <string name="gatoooo">gatooo</string>
+    <string name="holaaaaa">holaaa</string>
 </resources>
